[project]
name = "prettytable-pr78-demo"
version = "0.1.0"
description = "Minimal demo project inspired by dropping universal wheel for Python 2."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = ["pytest", "tomli"]

[tool.wheel]
# Project is Python 3-only; do not claim a universal (Py2+Py3) wheel
universal = false

[tool.ci]
# Include Python 3.9+ in CI matrix
python-versions = ["3.8", "3.9", "3.10"]

[tool.isort]
# Align isort configuration with Black formatting style
profile = "black"
